src/test/resources/com/github/stefanbirkner/chelidonium/errors/block.snippet


<form id="model" action="/test/errors/block.html" method="post">
	<div class="alert alert-error alert-block">Test A</div>
</form>